<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="error">Fehler</string>
    <string name="featureNotImplementedError">Dieses Feature ist leider noch nicht verfügbar :-( .</string>
    <string name="appTitle">Das Tippspiel</string>
    <string name="appName">TipIt</string>
    <string name="address">(IP-)Adresse des Servers</string>
    <string name="port">Port</string>
    <string name="portError">Falsche Port-Nummer eingegeben!</string>
    <string name="start">Start</string>
    <string name="username">Login Name</string>
    <string name="password">Passwort</string>
    <string name="login">Login</string>
    <string name="register">Registrieren</string>
    <string name="guest">Gast</string>
    <string name="passwordForgotten">Passwort vergessen</string>
    <string name="seeMenuHint">Drücke Menü-Taste für weitere Optionen …</string>
    <string name="welcome">Herzlich willkommen</string>
    <string name="mainMenu">Hauptmenü</string>
    <string name="betResult">Tipps / Ergebnisse</string>
    <string name="analysis">Auswertungen</string>
    <string name="tournamentAdmin">Meisterschaften</string>
    <string name="communityAdmin">Gemeinschaften</string>
    <string name="userSession">Nutzerdaten</string>
    <string name="rulesAdmin">Regelwerke</string>
    <string name="metaDataAdmin">Stammdaten</string>
    <string name="properties">Einstellungen</string>
    <string name="help">Hilfe</string>
    <string name="logout">Logout</string>
    <string name="byebye">Tschüß und bis zum nächsten Mal !!!</string>
    <string name="showTournOverview">Turnierübersicht anzeigen</string>
    <string name="showLastResultBets">Letzte Ergebnistipps anzeigen</string>
    <string name="addNextResultBets">Nächste Ergebnistipps abgeben</string>
    <string name="showLastWinnerBets">Letzte Gewinnertipps anzeigen</string>
    <string name="addNextWinnerBets">Nächste Gewinnertipps abgeben</string>
    <string name="showLastResults">Letzte Ergebnisse anzeigen</string>
    <string name="addNextResults">Nächste Ergebnisse eintragen</string>
    <string name="changeResults">Ergebnisse ändern</string>
    <string name="addNextMatches">Nächste Paarungen eintragen</string>
    <string name="changeMatches">Paarungen ändern</string>
    <string name="addNextWinners">Nächste Gewinner eintragen</string>
    <string name="changeWinners">Gewinner ändern</string>

</resources>