<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#008000"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/appName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFF00"
        android:textSize="110dp" />

    <TextView
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/addressInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/portText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/portInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/start" />

</LinearLayout>