<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#004000"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00FF00" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#00FF00" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginMenuHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/seeMenuHint"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="12dp" />

</LinearLayout>